# NN-CLI

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  ANN-CLI_Loader.cpp  ANN-CLI_Loader.hpp  ANN-CLI_Runner.cpp  ANN-CLI_Runner.hpp  CMakeLists.txt  LICENSE.md  NN-CLI_DataLoader.cpp  NN-CLI_DataLoader.hpp  NN-CLI_DataType.cpp  NN-CLI_DataType.hpp  NN-CLI_IOConfig.hpp  NN-CLI_ImageLoader.cpp  NN-CLI_ImageLoader.hpp  NN-CLI_Loader.cpp  NN-CLI_Loader.hpp  NN-CLI_LogLevel.hpp  NN-CLI_NetworkType.hpp  NN-CLI_ProgressBar.cpp  NN-CLI_ProgressBar.hpp  NN-CLI_Runner.cpp  NN-CLI_Runner.hpp  NN-CLI_Utils.cpp  NN-CLI_Utils.hpp  README.md  main.cpp
docs/: examples.html  formats.html  index.html  usage.html
examples/MNIST/: README.md  mnist_ann_config.json  mnist_cnn_config.json  mnist_config.json
examples/MNIST/predict/: mnist_digit_2_input.json
html/: examples.html  formats.html  index.html  quickstart.html  style.css  usage.html
libs/ANN/: ANN_ActvFunc.hpp  ANN_Core.hpp  ANN_CoreCPU.hpp  ANN_CoreGPU.hpp  ANN_CoreMode.hpp  ANN_CoreType.hpp  ANN_LayersConfig.hpp  ANN_Utils.hpp
scripts/: ensure-blank-lines.py
tests/: test_ann.cpp  test_cnn.cpp  test_dataloader.cpp  test_errors.cpp  test_helpers.hpp  test_main.cpp
tests/fixtures/: ann_train_augment_config.json  ann_train_config.json  ann_train_dropout_config.json  ann_train_samples.json  ann_train_weighted_config.json  cnn_predict_input.json  cnn_train_config.json  cnn_train_samples.json  cnn_train_weighted_config.json  mnist_ann_train_config.json  mnist_cnn_train_config.json
